crates/cribo/tests/snapshots/requirements@xfail_test_all_exports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_test_all_exports/main.py
---
packages: []
count: 0
