crates/cribo/tests/snapshots/requirements@xfail_test_forward_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_test_forward_reference/main.py
---
packages: []
count: 0
