crates/cribo/tests/snapshots/requirements@xfail_version_import_with_init_functions.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_version_import_with_init_functions/main.py
---
packages: []
count: 0
