crates/cribo/tests/snapshots/requirements@xfail_wrapper_module_builtin_types.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_wrapper_module_builtin_types/main.py
---
packages: []
count: 0
