crates/cribo/tests/snapshots/ruff_lint_results@alias_transformation_test.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/alias_transformation_test/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [
        "Line 7: unused-import - `types` imported but unused",
    ],
    total_violations: 1,
}
