crates/cribo/tests/snapshots/ruff_lint_results@all_variable_handling.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/all_variable_handling/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [
        "Line 63: unused-import - `nested_package.submodule` imported but unused",
    ],
    total_violations: 1,
}
