crates/cribo/tests/snapshots/ruff_lint_results@ast_rewrite_parameter_shadow.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/ast_rewrite_parameter_shadow/main.py
---
RuffLintResults {
    f401: [],
    f404: [],
    other: [],
    total: 0,
}
