crates/cribo/tests/snapshots/ruff_lint_results@ast_rewriting_entry_func_def_renames.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/ast_rewriting_entry_func_def_renames/main.py
---
RuffLintResults {
    f401: [],
    f404: [],
    other: [],
    total: 0,
}
